...
        }
    }
    var title: String {
        switch self {
        case .inProgress: return "In progress"
        case .upcoming: return "Scheduled matches"
        case .history: return "Match history"
        }
    }
    var symbol: String {
        switch self {
        case .inProgress: return "play.circle"
        case .upcoming: return "calendar"
...
